[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "aws-cost-tools"
version = "0.1.0"
description = "A flexible Python framework for generating AWS cost reports with CSV export capabilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "Toan Vo" },
]
keywords = ["aws", "cost", "reporting", "boto3", "cost-explorer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

# Runtime deps
dependencies = [
  "boto3>=1.34.0",
]

[project.optional-dependencies]
# Developer tooling
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "boto3-stubs[ce]>=1.34",
]

[project.scripts]
# Console scripts powered by uv run or direct invocation
cost-tools = "aws_cost_tools.cli:main"
cost-tools-examples = "aws_cost_tools.examples:run_all_examples"

[project.urls]
Homepage = "https://github.com/toanvv42/tools"
Repository = "https://github.com/toanvv42/tools/cost-tools"
Issues = "https://github.com/toanvv42/tools/issues"

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = [
  "aws_cost_reporter.py",
  "examples.py",
  "cost_cli.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
